MET-3983 Added javadoc to DatasetController. Fixed loops in TestUtils.